# webrtc_server_algorithm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Dockerfile  Makefile  README.md  cmake_install.cmake  key  key.pub
common/: crypto.cc  uavAlgorithm.h
example/: .rtp_src_example.cc.swp  .rtp_src_example.swp  TcpSimular.cc  daozha.cc  defect_nc25_bak.cc  ele_number_bp_bak.cc  ele_number_num.cc  number_class.cc  pybind11.cc  root.cc  rtp_src_example-c++.cc  rtp_src_example-picAnalyse.cc  rtp_src_example-pinjie.cc  rtp_src_example-root.cc  rtp_src_example-zzz.cc  rtp_src_example.cc  rtp_src_yc-picAnalyse.cc  yb_zsd.cc  zzyb.cc
include/: ClibInfoMySql.hpp  ClibJsonAnalyse.hpp  CommonFunc.hpp  ConnectPool.hpp  bytes_buffer.hpp  common.hpp  ftpcvmat.h  ftplib.cc  global.h  shm_buf.h  yolov8.hpp
include/algorithm/: QRCode.hpp  air_switch.hpp  cooler_fan.hpp  daozha.hpp  ele_number_bak.hpp  gear.hpp  handcart.hpp  number_class.hpp  oil_fugan.hpp  tg_oil.hpp  yb_zsd.hpp
include/algorithm/ele_number/: ele_number_bp.hpp  ele_number_num.hpp
mysql-connector-c++-1.1.12-linux-ubuntu18.04-x86-64bit/lib/: libmysqlcppconn.so.7
rtc/: webrtc_transport.cc
session/: webrtc_session.cc
sources/: infer.cu  shm_buf.cpp  shm_consumer.cpp
webrtchtml/: index.html
